Added new software, compressed personal image

--- a/index.html
+++ b/index.html
@@ -235,6 +235,41 @@
     </div>
   </div>
   
+  <!-- Software -->
+  <br>
+  <div class="w3-container w3-row-padding">
+    <h4 id="software"><b>Software</b></h4>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>MatrixSchubert</b></p>
+        <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT"><img src="./images/CAAT/alignment_7.png" alt="CAAT" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>CAAT</b></p>
+        <p>A tool to help analyze course alignment.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/MinimalOutNeighborhoods"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Minimal Out-Neighborhoods</b></p>
+        <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/Tropical-Curves"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Tropical Curves</b></p>
+        <p>Python scripts for visualizing tropical curves.</p>
+      </div>
+    </div>
+    <hr>
+  </div>
+
   <!-- Undergraduate Research -->
   <div class="w3-container w3-row-padding">
     <h4><b>Undergraduate Research</b></h4>
@@ -257,20 +292,6 @@
       <div class="w3-container w3-white">
         <p><b>Flight Route Estimation</b></p>
         <p>How well can you estimate the path of a LiDAR sensor given a scan of the terrain?</p>
-      </div>
-    </div>
-    <hr>
-  </div>
-
-  <!-- Software -->
-  <br>
-  <div class="w3-container w3-row-padding">
-    <h4 id="software"><b>Software</b></h4>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./matrixschubert.html"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>MatrixSchubert</b></p>
-        <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
       </div>
     </div>
     <hr>
