Corrected image path

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT"><img src="./images/CAAT/alignment_7.png" alt="CAAT" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>CAAT</b></p>
         <p>A tool to help analyze course alignment.</p>
