Reformatted abstract blocks

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           In: Springer INdAM series: The strong and weak Lefschetz properties (2023), to appear.
         </div>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/betti_wlp.pdf">PDF</a> | 
         Abstract 
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
@@ -94,9 +95,6 @@
           Our specific focus is on Betti tables rather than Hilbert functions, and we prove that a certain type of Betti table forces the failure of the Weak Lefschetz Property (WLP). 
           The corresponding Artinian algebras are typically not level, and the failure of WLP in these cases is not detected in terms of the Hilbert function.
         </blockquote>
-        <br>
-        <br>
-        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/betti_wlp.pdf">PDF</a>
         <br>
         <br>
       </li>
@@ -111,6 +109,7 @@
           DOI: 10.1109/IGARSS39084.2020.9323522.
         </div>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/surface_modeling.pdf">PDF</a> | 
         Abstract 
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
@@ -121,9 +120,6 @@
           Our key insight is that by using a ray casting approach we can perform shape modeling directly with lidar measurements. 
           We evaluate our method both quantitatively and qualitatively on learned surface accuracy and show that our method correctly predicts surface intersection even in sparse regions of the input cloud.
         </blockquote>
-        <br>
-        <br>
-        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/surface_modeling.pdf">PDF</a>
         <br>
         <br>
       </li>
@@ -139,6 +135,7 @@
             Submitted.
           </div>
           <br>
+          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a> | 
           Abstract 
           <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
           <blockquote class="abstract-content">
@@ -148,10 +145,6 @@
             We analyzed the impact of engaging with the CAAT on participants’ consideration of uniform homework. We found that in-
             teracting with the CAAT affected coordinated instructors’ definitions of homework quality and that the CAAT is a promising professional development tool for novice instructors in particular.
           </blockquote>
-          </details>
-          <br>
-          <br>
-          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a>
           <br>
           <br>
         </li>
@@ -169,6 +162,7 @@
             Submitted.
           </div>
           <br>
+          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/connected_sums.pdf">PDF</a> | 
           Abstract 
           <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
           <blockquote class="abstract-content">
@@ -178,10 +172,6 @@
             We relate the connected sum construction to the doubling construction, which also produces Gorenstein rings. 
             Specifically, we show that a connected sum of doublings is the doubling of a fiber product ring. 
           </blockquote>
-          </details>
-          <br>
-          <br>
-          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/connected_sums.pdf">PDF</a>
           <br>
           <br>
         </li>
@@ -197,6 +187,9 @@
             and <a class="weblink" href="https://jmcdonough98.github.io/" target="_blank">Joseph McDonough</a>).
             Submitted.
           </div>
+          <br>
+          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a> | 
+          <i class="fa fa-keyboard-o"></i> <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html">Code</a> | 
           Abstract 
           <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
           <blockquote class="abstract-content">
@@ -204,10 +197,6 @@
             This package has tools to construct and study matrix Schubert varieties and alternating sign matrix (ASM) varieties. 
             The package also introduces tools for quickly computing homological invariants of such varieties, finding the components of an ASM variety, and checking if a union of matrix Schubert varieties is an ASM variety. 
           </blockquote>
-          </details>
-          <br>
-          <br>
-          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a> | <i class="fa fa-keyboard-o"></i> <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html">Code</a>
           <br>
           <br>
         </li>       
