Created regularity webpage

--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
   <div class="w3-container w3-row-padding">
     <h4 id="research"><b>Graduate Research</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./tda.html"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Topological Data Analysis</b></p>
-        <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
+        <a class="weblink" href="./regularity.html"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
+        <p><b>Castelnuovo-Mumford Regularity</b></p>
+        <p>How complicated can generators and relations of a module be?</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -220,6 +220,13 @@
         <a class="weblink" href="./lefschetz.html"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
         <p><b>Lefschetz Properties</b></p>
         <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="./tda.html"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Topological Data Analysis</b></p>
+        <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
       </div>
     </div>
   </div>
